# romea-ros2-arm

./: .gitlab-ci.yml  romea_arm.repos  romea_arm_public.repos
romea_arm/: CMakeLists.txt  package.xml
romea_arm_bringup/: CMakeLists.txt  README.md  package.xml
romea_arm_bringup/config/: ur_controller_manager.yaml  ur_controllers.yaml  ur_joint_state_controller.yaml
romea_arm_bringup/launch/: arm.launch.py  arm_controllers.launch.py  arm_driver.launch.py
romea_arm_bringup/launch/drivers/: ur_robot_driver.launch.py
romea_arm_bringup/python/: romea_arm_bringup.py
romea_arm_bringup/scripts/: urdf_description.py
romea_arm_bringup/test/: test_arm_bringup.py  test_arm_bringup.yaml  test_urdf_description.py
romea_arm_description/: CMakeLists.txt  README.md  package.xml
romea_arm_description/python/: romea_arm_description.py
romea_arm_description/test/: test_arm_description.py
romea_arm_description/urdf/: ur_10.xacro.urdf  ur_5e.xacro.urdf  ur_arm.xacro
