<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>romea_arm_description</name>
  <version>0.0.0</version>
  <description>Package with URDF and description files of arms.</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>
  <depend>ur_robot_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>